copy custom.css to index.html add addthis a little  fix in alertModal use change some links to cdns collapse the nav menu on click comment some none used css/js added by pinegrow

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,16 +1,2 @@
 /* Put your custom styles here */
 
-#signButton, #logoutButton{
-    margin-top:5px;
-}
-#barter-browse-info{
-    padding-left: 30px;
-}
-
-.offer-profile
-{
-    background-color: #eee;
-    padding-left: 20px;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #e8e8e8;
-}
